# flappy_birds_clone

./: .gitmodules  CMakeLists.txt  ReadMe.md
flappy_birds/: CMakeLists.txt  flappy_bird.cpp  flappy_bird.h  game_object.h  main.cpp  pipes.cpp  pipes.h
